# queen-sweep

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pyproject.toml  rust-analyzer.toml  scrapeLevels.ts  tsconfig.json
data/: levels.jsonl
queen-sweep-benchmark/: Cargo.toml  README.md  package-lock.json  package.json  process_benchmark.py  pyproject.toml  scrapeLevels.ts
queen-sweep-benchmark/data/: base-levels.jsonl  bonus-levels.jsonl  community-levels.jsonl  levels.jsonl
queen-sweep-benchmark/src/: csv_writer.rs  heuristic.rs  levels.rs  loader.rs  main.rs
queen-sweep-benchmark/src/benchmark/: mod.rs  result.rs  runner.rs
queen-sweep-benchmark/stats/: base_no-heuristic.csv  base_smallest-region-by-empty-cells.csv  base_smallest-region-first.csv  bonus_no-heuristic.csv  bonus_smallest-region-by-empty-cells.csv  bonus_smallest-region-first.csv
queen-sweep-core/: Cargo.toml  README.md
queen-sweep-core/src/: cell_state.rs  dfs.rs  display.rs  game_state.rs  heuristic.rs  lib.rs  main.rs  sample_levels.rs
queen-sweep-heuristic-macros/: Cargo.toml
queen-sweep-macros/: Cargo.toml  README.md
queen-sweep-macros/src/: lib.rs
queen-sweep-python/: pyproject.toml
queen-sweep-python/src/: dfs.py  loader.py  main.py
queen-sweep-wasm/: Cargo.toml  README.md  index.ts  package-lock.json  package.json
queen-sweep-wasm/src/: lib.rs
queen-sweep-wasm/test/: index.js  (+1 more)
queen-sweep-web-extension/: README.md  move-html.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: cell_codec.py  graph_search.py  loader.py  main.py
(+27 files in other folders)
