[package]
name = "queen-sweep-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"
indicatif = { version = "0.17", features = ["rayon"] }
queen-sweep-core = { path = "../queen-sweep-core", features = ["display"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
